# PowerCoders-CODEFEST2024

./: .gitignore  CipherSuite.cpp  CipherSuite.h  README.md  UnitTests.md  compile.sh  main  main.cpp  makefile  original.txt  path_example_output  pre-compile.sh  prove  proves.cpp  read-image  read_image.cpp  test.cpp  test.in
CryptoUser/: CryptoUser.cpp  CryptoUser.h
EarthClient/: EarthBase.cpp  EarthBase.h
Google_tests/NewTests/: CMakeLists.txt  ProveTest.cpp  SuiteTests.cpp
SpaceServer/: Satellite.cpp  Satellite.h
libraries/wolfssl-5.7.2/: .build_params  Makefile  aminclude.am  config.h  config.status  configure  ecc-key.pem  wolfssl-config
libraries/wolfssl-5.7.2/debian/: changelog
libraries/wolfssl-5.7.2/src/: libwolfssl_la-crl.lo  libwolfssl_la-dtls.lo  libwolfssl_la-ssl.lo  libwolfssl_la-wolfio.lo
libraries/wolfssl-5.7.2/support/: wolfssl.pc
libraries/wolfssl-5.7.2/tests/: unit.test
pre-saved-parameters/: prime2048.txt
src/: CipherSuite.cpp  CipherSuite.h  main.cpp
src/CryptoUser/: CryptoUser.cpp  CryptoUser.h
src/EarthClient/: EarthBase.cpp  EarthBase.h
src/SpaceServer/: Satellite.cpp  Satellite.h
src/pre-saved-parameters/: prime2048.txt  seed.txt
wolfssl-5.7.2/: Makefile  Makefile.in  aminclude.am  config.status  libtool
wolfssl-5.7.2/debian/: changelog
wolfssl-5.7.2/rpm/: spec
wolfssl-5.7.2/src/: libwolfssl.la  libwolfssl_la-internal.lo  libwolfssl_la-keys.lo  libwolfssl_la-ocsp.lo  libwolfssl_la-quic.lo  libwolfssl_la-tls.lo  libwolfssl_la-tls13.lo
wolfssl-5.7.2/tests/: unit.test
wolfssl-5.7.2/testsuite/: testsuite.test
(+188 files in other folders)
